[package]
name = "ca"
version = "0.1.0"
authors = ["Shiwei Zhang <ylxdzsw@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
ordered-float = { version = "2.8", default-features = false }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
